# comem

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml  server.json  tsconfig.json  vite.config.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: README.md  concepts.md  demo-script.md  examples.md  index.md  launch-post.md  oss-launch-checklist.md  quickstart.md  tools.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css
docs/design/: agent-coordinator-loop-principles.md  local-codex-loop-detailed-design.md
docs/superpowers/plans/: 2026-07-12-human-attention-status-brief.md
frontend/: index.html
frontend/src/: App.svelte  main.js  styles.css  ui.js
frontend/test/: App.test.js  ui.test.js
src/coordination_memory_mcp/: __init__.py  cli.py  console.py  human_attention.py  loop_adapters.py  loop_models.py  loop_prompts.py  loop_runner.py  scaffold.py  server.py  store.py
src/coordination_memory_mcp/static/: app.js  index.html  styles.css
src/coordination_memory_mcp/templates/: AGENTS.section.md  claude-skill.md  copilot-instructions.md  cursor.mdc  mcp-config.json
tests/: pages-contract.test.mjs  test_acceptance_contracts.py  test_cancel_supersede.py  test_cli.py  test_console.py  test_coordination_memory.py  test_human_attention.py  test_human_attention_store.py  test_loop_adapters.py  test_loop_models.py  test_loop_prompts.py  test_loop_runner.py
