[project]
name = "coordination-memory-mcp"
version = "0.2.6"
description = "Local MCP server for append-only multi-agent coordination memory with an integrator-owned accepted projection and goal-level acceptance contracts."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "coordination-memory-mcp contributors" }]
keywords = [
  "mcp",
  "model-context-protocol",
  "agent",
  "multi-agent",
  "coordination",
  "sqlite",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "mcp>=1.27.0",
]

[project.urls]
Homepage = "https://yanqiw.github.io/comem/"
Documentation = "https://yanqiw.github.io/comem/quickstart"
Repository = "https://github.com/yanqiw/comem"
Issues = "https://github.com/yanqiw/comem/issues"

[project.scripts]
comem = "coordination_memory_mcp.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.8.0",
  "mypy>=1.13.0",
  "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coordination_memory_mcp"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
